Fix:  Delay in Seconds not showing long numbers. (#824)
* Fix:  Delay in Seconds not showing long numbers, per #822.

--- a/extension/settings/settings.css
+++ b/extension/settings/settings.css
@@ -13,14 +13,6 @@ input {
   margin-top: 5px;
 }
 
-input[type='file'] {
-  display: none;
-}
-
-input[type='number'] {
-  width: 5em;
-}
-
 label:hover {
   background-color: #d3d3d3;
   cursor: pointer;
